@@ -815,6 +815,7 @@ Torsten Landschoff
 Tino Lange
 Glenn Langford
 Andrew Langmead
+Wolfgang Langner
 Detlef Lannert
 Soren Larsen
 Amos Latteier
